--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ install:
   - conda update -q conda
   - conda create -q --name python%PYTHON_VERSION%-%PLATFORM% python=%PYTHON_VERSION%
   - activate python%PYTHON_VERSION%-%PLATFORM%
-  - conda install -q setuptools matplotlib nose pandas wheel scipy sphinx lockfile pip libpython
+  - conda install -q setuptools matplotlib nose pandas wheel scipy sphinx lockfile pip libpython twine
   - conda install -q -c msys2 m2w64-toolchain
   - python setup.py config --compiler=mingw32
 
